Revert "Changed posiiton of buttons on pops to prevent overlap"
This reverts commit 173273919893bb66aac1de7fe3c1f048e3bc3aa1.

--- a/SiteAssets/pages/2.0/scripts/user.dashboard.layout.1.css
+++ b/SiteAssets/pages/2.0/scripts/user.dashboard.layout.1.css
@@ -1235,7 +1235,9 @@ a.ms-tv-header:hover {
     border: solid 1.5px #fff;
     width: 65px;
     float: right;
-    margin: 5px;
+    position:  absolute;
+    right: 2%;
+    bottom: 20px;
 }
 
 .tpos-svbtn:hover {
